--- a/front/styles/index.css
+++ b/front/styles/index.css
@@ -1,118 +1,135 @@
+body {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    margin: 0;
+    padding: 0;
+    background-color: #111111;
+}
 
- body {
-            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            margin: 0;
-            padding: 0;
-            background-color: #111111;
-        }
-
-          /* Estilos para el encabezado */
+/* Estilos para el encabezado */
 header {
     background-color: #333;
     color: #fff;
     padding: 10px;
     display: flex;
-    align-items: center; /* Para alinear verticalmente los elementos */
-    justify-content: space-between; /* Para separar la imagen y la lista */
-  }
-  
-  /* Estilos para la imagen del encabezado */
-  header .logoPelicula {
-    width: 50px; /* Tamaño deseado */
-    height: auto; /* Altura automática para mantener la proporción */
-  }
-  
-  /* Estilos para la lista ordenada */
-  header ol {
-    list-style: none; /* Elimina los estilos predeterminados de la lista */
+    align-items: center;
+    /* Para alinear verticalmente los elementos */
+    justify-content: space-between;
+    /* Para separar la imagen y la lista */
+}
+
+/* Estilos para la imagen del encabezado */
+header .logoPelicula {
+    width: 50px;
+    /* Tamaño deseado */
+    height: auto;
+    /* Altura automática para mantener la proporción */
+}
+
+/* Estilos para la lista ordenada */
+header ol {
+    list-style: none;
+    /* Elimina los estilos predeterminados de la lista */
     margin: 0;
     padding: 0;
-  }
-  
-  /* Estilos para los elementos de la lista */
-  header ol li {
-    display: inline-block; /* Para que los elementos de la lista se muestren en línea */
-    margin-right: 10px; /* Espacio entre elementos */
-    font-size: 14px; /* Tamaño de fuente */
-  }
-  
-        h1 h2 p{
-            text-align: center;
-            margin-top: 30px;
-            color: antiquewhite;
-        }
+}
 
-      
-        #container {
-            width: auto; 
-            /* height: 0px; */
-            margin: 4rem auto;
-            display: flex; /* Usamos flexbox en lugar de grid */
-            flex-wrap: wrap; /* Permitimos que las tarjetas envuelvan en la siguiente línea si no hay suficiente espacio */
-            justify-content: space-around; /* Distribuimos el espacio disponible alrededor de las tarjetas */
-        }
-        
-        .movie-card {
-            width: 200px; 
-            flex: 0 1 300px; /* Flex-grow, flex-shrink, flex-basis */
-            margin: 10px;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            background-color: #858080;
-            box-shadow: 0 4px 6px rgba(204, 200, 200, 0.1);
-            transition: transform 0.3s ease;
-            display: flex;
-           flex-direction: column;
-        }
-        
-        .movie-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1);
-        }
-        .movie-card img {
-            max-width: 100%;
-            height: auto;
-            margin-bottom: 10px;
-            size: 400 300 px;
-        }
-        
-        .movie-card h2 {
-            font-size: 20px;
-            margin: 0;
-            color: #494848;
-        }
-        
-        .movie-card p {
-            margin: 5px 0;
-            color: #292828;
-        }
-        
-        .movie-card strong {
-            font-weight: bold;
-            color: #333;
-        }
+/* Estilos para los elementos de la lista */
+header ol li {
+    display: inline-block;
+    /* Para que los elementos de la lista se muestren en línea */
+    margin-right: 10px;
+    /* Espacio entre elementos */
+    font-size: 14px;
+    /* Tamaño de fuente */
+}
+
+h1 h2 p {
+    text-align: center;
+    margin-top: 30px;
+    color: antiquewhite;
+}
+
+
+#container {
+    width: auto;
+    /* height: 0px; */
+    margin: 4rem auto;
+    display: flex;
+    /* Usamos flexbox en lugar de grid */
+    flex-wrap: wrap;
+    /* Permitimos que las tarjetas envuelvan en la siguiente línea si no hay suficiente espacio */
+    justify-content: space-around;
+    /* Distribuimos el espacio disponible alrededor de las tarjetas */
+}
+
+.movie-card {
+    width: 200px;
+    flex: 0 1 300px;
+    /* Flex-grow, flex-shrink, flex-basis */
+    margin: 10px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #858080;
+    box-shadow: 0 4px 6px rgba(204, 200, 200, 0.1);
+    transition: transform 0.3s ease;
+    display: flex;
+    flex-direction: column;
+}
+
+.movie-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1);
+}
+
+.movie-card img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+    size: 400 300 px;
+}
+
+.movie-card h2 {
+    font-size: 20px;
+    margin: 0;
+    color: #494848;
+}
+
+.movie-card p {
+    margin: 5px 0;
+    color: #292828;
+}
+
+.movie-card strong {
+    font-weight: bold;
+    color: #333;
+}
+
 /*carusel*/
-#carouselPeliculas   .carousel-item > img {
+#carouselPeliculas .carousel-item>img {
     aspect-ratio: 16/9;
-    object-fit: cover; /* Maintain aspect ratio and cover the entire container */
+    object-fit: cover;
+    /* Maintain aspect ratio and cover the entire container */
     max-width: 100%;
     width: 100%;
-  }
-  #carouselPeliculas .carousel-slide {
+}
+
+#carouselPeliculas .carousel-slide {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
-  #carouselPeliculas .carousel-slide > img {
+}
+
+#carouselPeliculas .carousel-slide>img {
     height: 40vw;
     max-width: initial;
-  }
-  #carouselPeliculas .carousel-item::before {
+}
+
+#carouselPeliculas .carousel-item::before {
     content: "";
     position: absolute;
     z-index: 0;
     inset: 0;
     backdrop-filter: blur(5px);
-  }
+}
